[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rounder"
version = "1.0.0"
authors = [
        { name = "Nyggus", email = "nyggus@gmail.com" },
        { name = "Ruud van der Ham"},
]
description = "A tool for rounding numbers in complex Python objects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nyggus/rounder/"

[tool.setuptools]
packages = ["rounder"]

[project.optional-dependencies]
dev = ["wheel", "black", "pytest", "mypy", "setuptools", "build"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["README.md", "tests", "rounder"]
addopts = '--doctest-modules --doctest-glob="*.md"'
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL"
]
